--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --info-color: #4976ba;
   --warning-color: #ffbc11;
   --success-color: #4caf50;
+  --danger-color: #d9534f;
 }
 
 * {
